Fix color on mobile menu + slider hover

--- a/source/stylesheets/components/_configure-getcode.scss
+++ b/source/stylesheets/components/_configure-getcode.scss
@@ -206,10 +206,6 @@
       transition: 0.07s ease;
       border: none;
 
-      &:hover {
-        background-color: #515151;
-      }
-
       &:active {
         width: 25px;
         height: 25px;
